Open first GitHub Pages powered version of analysis of EUC

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,11 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Welcome to my EUC project!\n",
+    "**I'm riding Kingsong 16S. Unicycles are the most awesome electrified vehicles you could ever have. I want to meet more riders here in Lithuania**\n",
+    "\n",
     "* How to start riding EUC?\n",
-    "* Indications of range are rarely accurate. How to find a real range of a certain EUC? [Go to my research](euc_research.ipynb)\n",
-    "* What's the best price per range rate you can get on different brands? [Go to my research](euc_research.ipynb)\n",
+    "* Indications of range are rarely accurate. How to find a real range of a certain EUC? [Go to my research](./euc_research.html)\n",
+    "* What's the best price per range rate you can get on different brands? [Go to my research](./euc_research.html)\n",
     "* What about waterproof?\n",
-    "* Can't you get it cheaper?"
+    "* Can't you get it cheaper?\n",
+    "\n",
+    "Write [simonas.mamaitis@gmail.com](simonas.mamaitis@gmail.com) for more info."
    ]
   }
  ],
