Open first GitHub Pages powered version of analysis of EUC

--- a/index.ipynb
+++ b/index.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "* How to start riding EUC?\n",
     "* Indications of range are rarely accurate. How to find a real range of a certain EUC? [Go to my research](./euc_research.html)\n",
-    "* What's the best price per range rate you can get on different brands? [Go to my research](./euc_research.html)\n",
+    "* What's the best price per range rate you can get on different brands? [Go to my research](./price_research.html)\n",
     "* What about waterproof?\n",
     "* Can't you get it cheaper?\n",
     "\n",
