Update GitHub Pages powered version of analysis of EUC: add index files update

--- a/index.ipynb
+++ b/index.ipynb
@@ -15,7 +15,7 @@
     "* Gamintojai dažniausiai nurodo išpūstus vienu įkrovimu nuvažiuojamus atstumus. [Kaip juos nustatyti tiksliau?](./refs/range_research/euc_research_LT.html)\n",
     "* Skirtingų vienaračių modelių kainos ir nuvažiuojami atstumai skiriasi. [Kaip išsirinkti optimalų variantą už prieinamą kainą?](./refs/price_research/price_research.html)\n",
     "* Apie apsaugą nuo drėgmės.\n",
-    "* Kaip įmanoma išsisukti su pigesnėmis kainomis?"
+    "* Kaip įmanoma išsisukti su pigesnėmis kainomis? [Laikina nuoroda į parduodamus vienaračius per skelbimus](./refs/advertisements/advertisements.html)"
    ]
   }
  ],
