Update GitHub Pages powered version of analysis of EUC: add index files update

--- a/refs/advertisements/advertisements.ipynb
+++ b/refs/advertisements/advertisements.ipynb
@@ -902,13 +902,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "tags": [
      "user"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=1000 height=500 src=\"./advertisement_plots/skelbiu.html\" frameborder=\"0\"></iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%HTML\n",
     "<iframe width=1000 height=500 src=\"./advertisement_plots/skelbiu.html\" frameborder=\"0\"></iframe>"
